<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundologin2"
    tools:context=".views.CriarContaActivity"
    >



    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"/>



    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:ems="9"
        android:hint="@string/usuario"
        android:textColorHint="#FFFAFA"
        android:textSize="20sp"/>



    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        android:layout_marginTop="10dp"
        android:ems="9"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColorHint="#FFFAFA"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/REpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:ems="9"
        android:hint="@string/confirme_sua_senha"
        android:inputType="textPassword"
        android:textColorHint="#FFFAFA"
        android:textSize="20sp"/>



    <Button
        android:id="@+id/buttonCadastroNovaConta"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_below="@+id/REpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/arredondar"
        android:backgroundTint="#005CC5"
        android:ems="6"

        android:text="@string/login"
        android:textColor="#F8F8FF"
        android:textSize="10sp"
        tools:ignore="SmallSp" />




</RelativeLayout>