<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundologin2"
    tools:context=".views.MainActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo" />


    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="13"
        android:hint="@string/usuario"
        android:textColorHint="#FFFAFA"
        android:textSize="20sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_centerHorizontal="true"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:ems="13"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:maxLength="8"
            android:textColorHint="#FFFAFA"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_below="@+id/password1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/arredondar"
        android:backgroundTint="#005CC5"
        android:ems="6"
        android:text="@string/login"
        android:textColor="#FFFAFA"
        android:textSize="15sp" />


    <Button
        android:id="@+id/buttonCriarConta"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_below="@+id/buttonLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/arredondar"
        android:backgroundTint="#1EB9DD"
        android:ems="6"
        android:text="@string/criar_conta"
        android:textColor="#FFFAFA"
        android:textSize="10sp"
        tools:ignore="SmallSp" />


</RelativeLayout>